--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,53 @@
 .App {
   text-align: center;
 }
+.header{
+  width: 100%;
+  height: 60px;
+  background-color: rgba(46, 46, 114, 0.745);
+  font-size: 2em;
+  margin-bottom: 2em;
+}
+.container{
+  /* margin: auto; */
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 50px;
+    row-gap: 50px;
+    justify-content: space-around;
+}
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
+.switch-buttons{
+  transition: 0.5s;
+  height: 10em;
+  width: 10em;
+  border-radius: 20px;
+  outline: none;
+  border: none;
+  background-color: wheat;
+  box-shadow: #282c341c 1px 1px 1px 1px ;
+}
+.switch-buttons:hover{
+  transition: 0.5s;
+  background-color: rgb(192, 173, 138);
+}
+.button-contents{
+  justify-content: space-around;
+  display: flex;
+  row-gap: 20px;
+  column-gap: 100px;
+  flex-wrap: wrap;
+}
+span{
+  font-size: 1.5em;
+}
+i{
+  font-size: 5em;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
